force-app/main/default/objects/ProductRequest/ProductRequest.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>