force-app/main/default/objects/ProductRequest/fields/Code_destinataire__c.field-meta.xml
<CustomField>
    <fullName>Code_destinataire__c</fullName>
    <label>Code destinataire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>