force-app/main/default/objects/ProductRequest/fields/Date_d_expedition__c.field-meta.xml
<CustomField>
    <fullName>Date_d_expedition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;expédition</label>
    <type>Date</type>
</CustomField>