force-app/main/default/objects/ProductRequest/fields/Description_du_produit__c.field-meta.xml
<CustomField>
    <fullName>Description_du_produit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description du produit</label>
    <type>TextArea</type>
</CustomField>