force-app/main/default/objects/ProductRequest/fields/Nom_du_destinataire__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_destinataire__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nom du destinataire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>