force-app/main/default/objects/ProductRequest/fields/Nombre_de_lignes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_lignes__c</fullName>
    <label>Nombre de lignes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>