force-app/main/default/objects/ProductRequest/fields/Numero_bon_du_transporteur__c.field-meta.xml
<CustomField>
    <fullName>Numero_bon_du_transporteur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numéro bon du transporteur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>