force-app/main/default/objects/ProductRequest/fields/Numero_de_ligne__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_ligne__c</fullName>
    <label>Numéro de ligne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>