force-app/main/default/objects/ProductRequest/fields/Numero_du_bon__c.field-meta.xml
<CustomField>
    <fullName>Numero_du_bon__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numéro du bon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>