force-app/main/default/objects/ProductRequest/fields/ProductRequest_ExtId__c.field-meta.xml
<CustomField>
    <fullName>ProductRequest_ExtId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ProductRequest_ExtId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>