force-app/main/default/objects/ProductRequest/fields/Quantite__c.field-meta.xml
<CustomField>
    <fullName>Quantite__c</fullName>
    <label>Quantité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>