force-app/main/default/objects/ProductRequest/fields/Recu__c.field-meta.xml
<CustomField>
    <fullName>Recu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reçu</label>
    <type>Checkbox</type>
</CustomField>