force-app/main/default/objects/ProductRequest/fields/Reference_Expedition__c.field-meta.xml
<CustomField>
    <fullName>Reference_Expedition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Référence Expédition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>