force-app/main/default/objects/ProductRequest/fields/Reference_produit__c.field-meta.xml
<CustomField>
    <fullName>Reference_produit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Référence produit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>