force-app/main/default/objects/ProductRequest/fields/Ressource_de_service__c.field-meta.xml
<CustomField>
    <fullName>Ressource_de_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource de service</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Suivis des expéditions</relationshipLabel>
    <relationshipName>Suivis_des_expeditions</relationshipName>
    <type>Lookup</type>
</CustomField>