force-app/main/default/objects/ProductRequest/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>FOURNIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>