force-app/main/default/objects/ProductRequest/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <label>Transporteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chronopost</fullName>
            </value>
            <value>
                <fullName>Liste (Suite)</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Fournir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>