force-app/main/default/objects/ProductRequest/fields/URL_de_Suivi_du_Transport__c.field-meta.xml
<CustomField>
    <fullName>URL_de_Suivi_du_Transport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL de Suivi du Transport</label>
    <type>TextArea</type>
</CustomField>