force-app/main/default/objects/ProductRequest/listViews/My_ProductRequests.listView-meta.xml
<ListView>
    <fullName>My_ProductRequests</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>WorkOrder</columns>
    <columns>WorkOrderLineItem</columns>
    <columns>DestinationLocation</columns>
    <columns>SourceLocation</columns>
    <columns>Case</columns>
    <columns>Account</columns>
    <filterScope>Mine</filterScope>
    <label>Mes demandes de produit</label>
</ListView>