force-app/main/default/objects/ProductRequest/listViews/Non_recu.listView-meta.xml
<ListView>
    <fullName>Non_recu</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>WorkOrder</columns>
    <columns>WorkOrderLineItem</columns>
    <columns>DestinationLocation</columns>
    <columns>SourceLocation</columns>
    <columns>Case</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Reçu</value>
    </filters>
    <label>Non reçu</label>
</ListView>