force-app/main/default/objects/ProductRequest/listViews/Tous_les_suivis_d_exp_ditions.listView-meta.xml
<ListView>
    <fullName>Tous_les_suivis_d_exp_ditions</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>WorkOrder</columns>
    <columns>WorkOrderLineItem</columns>
    <columns>DestinationLocation</columns>
    <columns>SourceLocation</columns>
    <columns>Case</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les suivis d&apos;expéditions</label>
</ListView>